# GamedevYourock

./: README.md
Gamedev/01-1-hello-world/: CMakeCache.txt  CMakeLists.txt  Hello  Hello.cpp  Makefile  cmake_install.cmake
Gamedev/01-1-hello-world/02-1-sdl-dynamic/: CMakeLists.txt  version.cpp
Gamedev/01-2-hello-lib/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hello.cpp~  hello.hpp~
Gamedev/01-2-hello-lib/include/: hello.h
Gamedev/01-2-hello-lib/src/: hello.cpp
Gamedev/02-1-sdl-dynamic/: CMakeLists.txt
Gamedev/02-2-sdl-static/: CMakeLists.txt
Gamedev/03-1-sdl-game-loop/: CMakeLists.txt  loop-easy.cpp
Gamedev/03-2-sdl-game-engine/: CMakeLists.txt  game-engine.cpp  main.cpp
Gamedev/03-2-sdl-game-engine/include/: game-engine.h
Gamedev/03-3-sdl-engine-lib/: CmakeLists.txt
Gamedev/03-3-sdl-engine-lib/engine/: CMakeLists.txt  game-engine.cpp
Gamedev/03-3-sdl-engine-lib/game/: CMakeLists.txt  main.cpp
Gamedev/04-2-opengl-triangle/: CMakeLists.txt  game-engine.cpp  game-engine.h  main.cpp
